--- a/AutoMall/ViewControllers/Login_Register/RegisterViewController.xib
+++ b/AutoMall/ViewControllers/Login_Register/RegisterViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -273,7 +273,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我已阅读并同意" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SsV-ge-kZs">
-                    <rect key="frame" x="44" y="288" width="108" height="21"/>
+                    <rect key="frame" x="48" y="290" width="108" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="UQh-Jg-IAG"/>
                     </constraints>
@@ -292,13 +292,13 @@
                     </variation>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5UD-mc-Hga">
-                    <rect key="frame" x="19" y="289" width="20" height="20"/>
+                    <rect key="frame" x="19" y="289" width="24" height="24"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="27" id="ITx-GL-Av4">
-                            <variation key="widthClass=compact" constant="20"/>
+                            <variation key="widthClass=compact" constant="24"/>
                         </constraint>
                         <constraint firstAttribute="height" constant="27" id="c9j-l3-Q1o">
-                            <variation key="widthClass=compact" constant="20"/>
+                            <variation key="widthClass=compact" constant="24"/>
                         </constraint>
                     </constraints>
                     <state key="normal" image="checkbox_no">
@@ -319,7 +319,7 @@
                     </variation>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahM-zy-pf3">
-                    <rect key="frame" x="157" y="284" width="199" height="30"/>
+                    <rect key="frame" x="161" y="286" width="199" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="HvZ-d5-XYj"/>
                     </constraints>
@@ -360,8 +360,8 @@
         </view>
     </objects>
     <resources>
-        <image name="checkbox_no" width="27" height="27"/>
-        <image name="checkbox_yes" width="27" height="27"/>
+        <image name="checkbox_no" width="90" height="90"/>
+        <image name="checkbox_yes" width="90" height="90"/>
         <image name="mimaEye_close" width="64" height="66"/>
         <image name="mimaEye_open" width="64" height="66"/>
     </resources>
