--- a/AutoMall/ViewControllers/Upkeep/ServicePackageVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/ServicePackageVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -51,7 +51,7 @@
                 <constraint firstItem="Bcm-Kc-vvY" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="fpQ-1q-Pko"/>
                 <constraint firstItem="Bcm-Kc-vvY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="fr2-PO-sNI"/>
             </constraints>
-            <point key="canvasLocation" x="-317.5" y="63.5"/>
+            <point key="canvasLocation" x="15" y="43"/>
         </view>
     </objects>
 </document>
