--- a/AutoMall/ViewControllers/Upkeep/UpkeepPlanNormalHeadCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/UpkeepPlanNormalHeadCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -30,7 +30,7 @@
                             <constraint firstAttribute="height" constant="30" id="2Ev-mN-pip"/>
                             <constraint firstAttribute="width" constant="30" id="v1K-h3-trs"/>
                         </constraints>
-                        <inset key="imageEdgeInsets" minX="6" minY="6" maxX="6" maxY="6"/>
+                        <inset key="imageEdgeInsets" minX="3" minY="3" maxX="3" maxY="3"/>
                         <state key="normal" image="checkbox_no"/>
                         <state key="selected" image="checkbox_yes"/>
                     </button>
@@ -50,7 +50,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="checkbox_no" width="27" height="27"/>
-        <image name="checkbox_yes" width="27" height="27"/>
+        <image name="checkbox_no" width="90" height="90"/>
+        <image name="checkbox_yes" width="90" height="90"/>
     </resources>
 </document>
