--- a/AutoMall/ViewControllers/Upkeep/ResultCheckContentDetailCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/ResultCheckContentDetailCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,13 +19,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6sM-TC-f1i">
-                        <rect key="frame" x="16" y="22" width="0.0" height="0.0"/>
+                        <rect key="frame" x="18" y="22" width="0.0" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MQC-Kd-0YE">
-                        <rect key="frame" x="27.5" y="22" width="0.0" height="0.0"/>
+                        <rect key="frame" x="29.5" y="22" width="0.0" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -43,7 +43,7 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="6sM-TC-f1i" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="3ud-8v-JhG"/>
+                    <constraint firstItem="6sM-TC-f1i" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="3ud-8v-JhG"/>
                     <constraint firstItem="YLe-2d-4RG" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="NMF-gh-ml8"/>
                     <constraint firstItem="MQC-Kd-0YE" firstAttribute="centerY" secondItem="6sM-TC-f1i" secondAttribute="centerY" id="bNr-IJ-ivd"/>
                     <constraint firstItem="6sM-TC-f1i" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="d40-C3-YQ7"/>
