--- a/AutoMall/ViewControllers/Mall/MetodPaymentVC.xib
+++ b/AutoMall/ViewControllers/Mall/MetodPaymentVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -28,7 +28,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fZz-eb-0u6">
-                            <rect key="frame" x="0.0" y="74" width="375" height="400"/>
+                            <rect key="frame" x="0.0" y="10" width="375" height="400"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tlh-8E-Au7">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
@@ -438,7 +438,7 @@
                         <constraint firstAttribute="trailing" secondItem="fZz-eb-0u6" secondAttribute="trailing" id="CaQ-Bc-lTN"/>
                         <constraint firstItem="fZz-eb-0u6" firstAttribute="leading" secondItem="P09-gi-RIe" secondAttribute="leading" id="SdR-Yg-ROd"/>
                         <constraint firstAttribute="bottom" secondItem="fZz-eb-0u6" secondAttribute="bottom" id="tox-Ib-m0R"/>
-                        <constraint firstItem="fZz-eb-0u6" firstAttribute="top" secondItem="P09-gi-RIe" secondAttribute="top" constant="74" id="xpN-Kn-ecE"/>
+                        <constraint firstItem="fZz-eb-0u6" firstAttribute="top" secondItem="P09-gi-RIe" secondAttribute="top" constant="10" id="xpN-Kn-ecE"/>
                     </constraints>
                 </scrollView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ACT-r3-tu0">
